fix: z-index for banner

--- a/src/assets/scss/_banner.scss
+++ b/src/assets/scss/_banner.scss
@@ -9,6 +9,7 @@
 .banner {
   min-height: 1090px;
   display: flex;
+  z-index: -1;
   h1 {
     max-width: 800px;
   }
